# reddit-enhancer

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TESTING_GUIDE.md  alembic.ini  env.example  package-lock.json  pyproject.toml
.github/workflows/: auto-mode.yml  ci.yml  data-pipeline.yml  deploy-dashboard.yml  fetch-reddit-data.yml  manual-mode.yml  scheduled-bot.yml
alembic/: env.py
alembic/versions/: 2067774a6a58_merge_fts_and_audit_timestamps.py  7655f09c4dad_initial_schema_with_indexes.py  add_audit_timestamps.py  add_full_text_search.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: rising-posts.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AIProviderStats.tsx  ActivityChart.tsx  CommentAssistant.tsx  RecentComments.tsx  StatsCard.tsx  SubredditBreakdown.tsx
dashboard/src/lib/: ai.ts  data.ts  supabase.ts
internal_docs/: ARCHITECTURE_REVIEW.md  COMMENT_ENHANCEMENT_WITH_DB.md  DATABASE_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md
scripts/: fetch_reddit_posts.py  generate_dashboard_data.py
src/: ai_generator.py  auto_runner.py  database.py  main.py  reddit_client.py  seeder.py  telegram_handler.py
src/application/: __init__.py  dtos.py  interfaces.py
src/application/use_cases/: __init__.py  generate_comment.py  post_comment.py  scan_posts.py
src/cli/: commands.py  runner.py  seeder.py  test_flow.py
src/common/: anti_detection.py  circuit_breaker.py  db_retry.py  exceptions.py  logging.py  retry.py
src/config/: constants.py  settings.py  validator.py
src/domain/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  claude_client.py  fallback_client.py  gemini_client.py  prompt_builder.py
src/infrastructure/database/: __init__.py  connection.py  models.py  repositories.py
src/infrastructure/monitoring/: __init__.py  logger.py
src/infrastructure/reddit/: __init__.py  mock.py  proxy_utils.py  reader.py  (+1 more)
tests/: conftest.py
(+10 files in other folders)
