[project]
name = "karma-assistant"
version = "0.1.0"
description = "Reddit Karma Assistant with AI"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.10"
dependencies = [
    "praw",
    "anthropic",
    "python-telegram-bot",
    "python-dotenv",
    "sqlalchemy",
    "psycopg2-binary",
    "typer",
    "rich"
]

[project.scripts]
bot = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
